force-app/main/default/objects/CaseZendeskTicketInfo__e/CaseZendeskTicketInfo__e.object-meta.xml
<CustomObject>
    <description>Platform event to publish after zendesk api sends response back after creating a ticket for a case.</description>
    <label>CaseZendeskTicketInfo</label>
    <pluralLabel>CasesZendeskTicketInfo</pluralLabel>
</CustomObject>