force-app/main/default/objects/CaseZendeskTicketInfo__e/fields/API_Response__c.field-meta.xml
<CustomField>
    <fullName>API_Response__c</fullName>
    <description>Message received from Zendesk after a create ticket request is made.</description>
    <label>API Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>