force-app/main/default/objects/CaseZendeskTicketInfo__e/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <description>Id of the case for which ticket is created in Zendesk.</description>
    <label>Case Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>