force-app/main/default/objects/CaseZendeskTicketInfo__e/fields/Ticket_Id__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Id__c</fullName>
    <description>Id of ticket created in zendesk</description>
    <label>Ticket Id</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>