force-app/main/default/objects/CaseZendeskTicketInfo__e/fields/Ticket_URL__c.field-meta.xml
<CustomField>
    <fullName>Ticket_URL__c</fullName>
    <description>Field to store zendesk ticket url.</description>
    <label>Ticket URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>